--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch": "tsc --w",
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.prod.js"
   },
